--- a/web/src/sidebar.css
+++ b/web/src/sidebar.css
@@ -54,4 +54,16 @@ aside form button[ type = submit] {
     border: 0;
     margin-top: 30px;
     background: #7d40e7;
+    border-radius: 2px;
+    padding: 15px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFF;
+    cursor: pointer;
+    transition: background 0.5s;
+
+}
+
+aside form button[type = submit]:hover {
+    background: #6931ca;
 }
