--- a/web/src/global.css
+++ b/web/src/global.css
@@ -12,10 +12,10 @@ html, body, #root {
 }
 
 body {
-    background: #E5E6F0;
+    background: #e5e6f0;
     -webkit-font-smoothing: antialiased;
 }
 
-body, input, button {
+body, imput, button {
     font-family: Roboto, sans-serif;
 }
